--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@canvasjs/react-charts": "^1.0.2",
+    "chart.js": "^4.4.4",
     "d3": "^7.9.0",
     "rc-slider": "^11.1.5",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-charts": "^3.0.0-beta.57",
     "react-dom": "^18.3.1",
     "semantic-ui-css": "^2.5.0",
